@@ -1,3 +1,8 @@
+2002-09-13  Mark Salter  <msalter@redhat.com>
+
+	* src/decompress.c: Move error handling back into gzip_close to
+	fix xyzmodem loads.
+
 2002-09-12  Mark Salter  <msalter@redhat.com>
 
 	* src/decompress.c (gzip_inflate): Fix error return so that upper
